--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Basic JavaScript</title>
 </head>
 <body>
-    <h1>Basic javaScript</h1>
+    <h1>Basic javaScript with html & css</h1>
 </body>
 </html>
